# russimp

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  install_assimp.bash  rustfmt.toml
.github/workflows/: russimp-sys.yml  russimp.yml
assimp-sys/: Cargo.toml  build.rs
assimp-sys/src/: lib.rs
examples/: load_scene_with_props.rs
models/COLLADA/: blender_cube.dae  blender_plane.dae
models/FBX/: cube_armature.fbx  y_bot_run.fbx
models/GLTF2/round_wooden_table_01_4k/: round_wooden_table_01_4k.gltf
russimp-core/: Cargo.toml
russimp-core/src/: bone.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  node.rs  scene.rs
russimp-sys/: Cargo.toml  README.md  build.rs  wrapper.h
russimp-sys/.github/workflows/: russimp-sys.yml
russimp-sys/src/: bindings.rs  lib.rs
src/: animation.rs  bone.rs  camera.rs  face.rs  fs.rs  impl_mint.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  node.rs  property.rs  scene.rs  texture.rs
