[package]
name = "russimp"
version = "0.1.7"
authors = ["Jhonny Knaak de Vargas"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp"
categories = ["rendering", "external-ffi-bindings", "game-engines", "multimedia"]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/jkvargas/russimp"
description = "Assimp bindings for rust"
exclude = [ "*.bash", "/models" ]

[lib]
name = "russimp"
path = "src/lib.rs"

[dependencies]
russimp-sys = "0.2.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
num_enum = "0.5.1"
derivative = "2.1.1"
mint = { version ="0.5.6", optional = true }
