[package]
name = "russimp"
version = "1.0.0"
authors = ["Jhonny Knaak de Vargas"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp"
categories = ["rendering", "external-ffi-bindings", "game-engines", "multimedia"]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/jkvargas/russimp"
description = "Assimp bindings for rust"
exclude = [ "*.bash", "/models" ]

[lib]
name = "russimp"
path = "src/lib.rs"

[dependencies]
russimp-sys = { path = "../russimp-sys" }
num-derive = "0.3.3"
num-traits = "0.2.14"
num_enum = "0.5.4"
derivative = "2.2.0"
mint = { version = "0.5.8", optional = true }
