[package]
name = "russimp"
version = "2.0.1"
authors = ["Jhonny Knaak de Vargas"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp"
categories = ["rendering", "external-ffi-bindings", "game-engines", "multimedia"]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/jkvargas/russimp"
description = "Assimp bindings for rust"
exclude = [ "*.bash", "/models" ]

[lib]
name = "russimp"
path = "src/lib.rs"

[dependencies]
russimp-sys = "1.0.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_enum = "0.5.7"
derivative = "2.2.0"
strum = "0.24.1"
strum_macros = "0.24.3"
mint = { version = "0.5.9", optional = true }

[features]
default=[]
prebuilt=["russimp-sys/prebuilt"]
static-link=["russimp-sys/static-link"]
nozlib = ["russimp-sys/nozlib"]
nolibcxx = ["russimp-sys/nolibcxx"]

[package.metadata.docs.rs]
features = ["prebuilt"]