[package]
name = "russimp-sys"
version = "0.1.0"
authors = ["Jhonny Vargas <jhonny.knaak@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "russimp_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1.44"